ec2securitygroup.yml
AWSTemplateFormatVersion: "2010-09-09"
Resources:
  MySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: vpc-0c34137c6a24580a0  #Hyderabad's default VPC     
      GroupDescription: Security group for app server
      GroupName: mob_pgm_all
      SecurityGroupEgress:    
        - CidrIp: 202.88.154.70/32
          Description: Remote
          FromPort: 3389                               # Outbound rules
          IpProtocol: tcp
          ToPort: 3389
        - CidrIp: 0.0.0.0/0
          Description: All outbound access from https
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443    
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443                                
          CidrIp: 61.0.40.203/32
          Description: Jath ho
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443                                
          CidrIp:  183.87.225.124/32     
          Description: datalink https
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443                                
          CidrIp:  110.227.214.246/32     
          Description: jath Urban Co-Op Bank Sangli
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443                                
          CidrIp:  202.88.154.70/32     
          Description: hathway https
        - IpProtocol: tcp
          FromPort: 3389
          ToPort: 3389                                
          CidrIp:  202.88.154.70/32     
          Description: hathway rdp
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443                                
          CidrIp:  182.74.132.246/32     
          Description: jath Urban Co-Op Bank Sangli
        - IpProtocol: tcp
          FromPort: 3389
          ToPort: 3389                                
          CidrIp:  172.30.2.53/32    
          Description: rdp
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443                               
          CidrIp:  61.2.228.197/32   
          Description: https djyoti
        - IpProtocol: tcp
          FromPort: 3389
          ToPort: 3389                                
          CidrIp:  183.87.225.124/32    
          Description: datalink rdp
